MiniProjectSynechron/ProjectSynechron/force-app/main/default/objects/Pet__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <label>Color</label>
    <type>Text</type>
    <length>255</length>
</CustomField> 