MiniProjectSynechron/ProjectSynechron/force-app/main/default/objects/Pet__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Owner</relationshipLabel>
    <relationshipName>Owner</relationshipName>
</CustomField> 