MiniProjectSynechron/ProjectSynechron/force-app/main/default/objects/Pet__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Dog</fullName><default>false</default></value>
            <value><fullName>Cat</fullName><default>false</default></value>
            <value><fullName>Bird</fullName><default>false</default></value>
            <value><fullName>Hamster</fullName><default>false</default></value>
            <value><fullName>Rabbit</fullName><default>false</default></value>
            <value><fullName>Guinea Pig</fullName><default>false</default></value>
            <value><fullName>Mouse</fullName><default>false</default></value>
            <value><fullName>Rat</fullName><default>false</default></value>
            <value><fullName>Fish</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 